--- a/etc/project.properties
+++ b/etc/project.properties
@@ -145,7 +145,7 @@ servicemix_version=1.0-SNAPSHOT
 spring_version=1.1.3
 stax_version=1.1.1-dev
 stax_api_version=1.0
-tmporb_version=1.0-SNAPSHOT
+tmporb_version=1.0-DEAD
 tomcat_ajp_version=5.5.9
 tomcat_version=5.5.9
 velocity_version=1.4
