--- a/etc/project.properties
+++ b/etc/project.properties
@@ -128,7 +128,7 @@ jasper_version=5.5.9
 javacc_version=2.1
 jelly_velocity_tags_version=1.0
 jetty_version=5.1.4
-juddi_version=SNAPSHOT
+juddi_version=0.9rc4
 junit_version=3.8.1
 log4j_version=1.2.8
 maven_itest_plugin_version=1.0
@@ -139,7 +139,7 @@ openorb_version=1.4.0-GERONIMO
 oro_version=2.0.8
 p2psockets_version=1.1.2
 regexp_version=1.3
-scout_version=1.0-SNAPSHOT
+scout_version=0.5
 servicemix_spring_version=1.2.2-dev-2
 servicemix_version=1.0-SNAPSHOT
 spring_version=1.1.3
