--- a/etc/project.properties
+++ b/etc/project.properties
@@ -95,7 +95,7 @@ geronimo_spec_qname_version=1.1-rc4
 ant_version=1.5
 antlr_version=2.7.2
 axion_version=1.0-M3-dev
-axis_version=1.3-SNAPSHOT
+axis_version=1.3-200507281605
 avalon_framework_version=4.1.4
 avalon_logkit_version=1.2.2
 bouncycastle_version=jdk14-124
@@ -141,7 +141,7 @@ p2psockets_version=1.1.2
 regexp_version=1.3
 scout_version=0.5
 servicemix_spring_version=1.2.2-dev-2
-servicemix_version=1.0-SNAPSHOT
+servicemix_version=1.0-M1
 spring_version=1.1.3
 stax_version=1.1.1-dev
 stax_api_version=1.0
