Fixed eclipse xmlbeans loaction for the m:eclipse project generation
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@226660 13f79535-47bb-0310-9956-ffa450edef68

--- a/modules/j2ee-schema/project.properties
+++ b/modules/j2ee-schema/project.properties
@@ -3,7 +3,7 @@
 ##
 
 # Include the generated xmlbean classes in the eclipse classpath
-maven.eclipse.classpath.include=target/xmlbeans
+maven.eclipse.classpath.include=${basedir}/target/xmlbeans
 
 
 maven.idea.generated.source=xmlbeans
