--- a/modules/naming-builder/project.properties
+++ b/modules/naming-builder/project.properties
@@ -1,5 +1,5 @@
 ##
 ## $Rev: 46019 $ $Date: 2004-09-14 02:56:06 -0700 (Tue, 14 Sep 2004) $
 ##
-maven.eclipse.classpath.include=target/xmlbeans
+maven.eclipse.classpath.include=${basedir}/target/xmlbeans
 maven.idea.generated.source=xmlbeans
