--- a/etc/project.properties
+++ b/etc/project.properties
@@ -69,8 +69,8 @@ maven.javadoc.source=1.4
 asm_version=1.4.3
 activeio_version=1.1
 activemq_version=3.1-M5
-geronimo_version=1.0-M4-SNAPSHOT
-openejb_version=2.0-G1M4-SNAPSHOT
+geronimo_version=1.0-M4
+openejb_version=2.0-G1M4
 tranql_version=1.0-20050713
 tranql_connector_version=1.0-20050716
 
