fix for GERONIMO-857; add servlet mapping entries
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@230572 13f79535-47bb-0310-9956-ffa450edef68

--- a/applications/console-framework/src/webapp/WEB-INF/config/services/ConfigService.properties
+++ b/applications/console-framework/src/webapp/WEB-INF/config/services/ConfigService.properties
@@ -40,3 +40,5 @@ portletcontainer.uniquename = pluto
 portletcontainer.entrance.impl = org.apache.pluto.PortletContainerImpl
 portletcontainer.entrance.wrapper.impl = org.apache.pluto.portalImpl.core.PortletContainerWrapperImpl
 
+servlet.insecure=/portal
+servlet.secure=/secure
