Basic implementation for the Applications/[Module Type] portlets   GERONIMO-794 (thanks to Joe Bohn)
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@230608 13f79535-47bb-0310-9956-ffa450edef68

--- a/applications/console-standard/src/webapp/WEB-INF/web.xml
+++ b/applications/console-standard/src/webapp/WEB-INF/web.xml
@@ -93,7 +93,7 @@ limitations under the License.
         <servlet-class>org.apache.pluto.core.PortletServlet</servlet-class>
         <init-param>
             <param-name>portlet-class</param-name>
-            <param-value>org.apache.geronimo.console.EmptyPortlet</param-value>
+            <param-value>org.apache.geronimo.console.configmanager.ConfigManagerPortlet</param-value>
         </init-param>
         <init-param>
             <param-name>portlet-guid</param-name>
@@ -106,7 +106,7 @@ limitations under the License.
         <servlet-class>org.apache.pluto.core.PortletServlet</servlet-class>
         <init-param>
             <param-name>portlet-class</param-name>
-            <param-value>org.apache.geronimo.console.EmptyPortlet</param-value>
+            <param-value>org.apache.geronimo.console.configmanager.ConfigManagerPortlet</param-value>
         </init-param>
         <init-param>
             <param-name>portlet-guid</param-name>
@@ -119,7 +119,7 @@ limitations under the License.
         <servlet-class>org.apache.pluto.core.PortletServlet</servlet-class>
         <init-param>
             <param-name>portlet-class</param-name>
-            <param-value>org.apache.geronimo.console.EmptyPortlet</param-value>
+            <param-value>org.apache.geronimo.console.configmanager.ConfigManagerPortlet</param-value>
         </init-param>
         <init-param>
             <param-name>portlet-guid</param-name>
@@ -132,7 +132,7 @@ limitations under the License.
         <servlet-class>org.apache.pluto.core.PortletServlet</servlet-class>
         <init-param>
             <param-name>portlet-class</param-name>
-            <param-value>org.apache.geronimo.console.EmptyPortlet</param-value>
+            <param-value>org.apache.geronimo.console.configmanager.ConfigManagerPortlet</param-value>
         </init-param>
         <init-param>
             <param-name>portlet-guid</param-name>
@@ -145,7 +145,7 @@ limitations under the License.
         <servlet-class>org.apache.pluto.core.PortletServlet</servlet-class>
         <init-param>
             <param-name>portlet-class</param-name>
-            <param-value>org.apache.geronimo.console.EmptyPortlet</param-value>
+            <param-value>org.apache.geronimo.console.configmanager.ConfigManagerPortlet</param-value>
         </init-param>
         <init-param>
             <param-name>portlet-guid</param-name>
@@ -158,7 +158,7 @@ limitations under the License.
         <servlet-class>org.apache.pluto.core.PortletServlet</servlet-class>
         <init-param>
             <param-name>portlet-class</param-name>
-            <param-value>org.apache.geronimo.console.EmptyPortlet</param-value>
+            <param-value>org.apache.geronimo.console.configmanager.ConfigManagerPortlet</param-value>
         </init-param>
         <init-param>
             <param-name>portlet-guid</param-name>
