Since the code is different from M4, use a different javamail version.  Also sync some versions with openejb
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@231143 13f79535-47bb-0310-9956-ffa450edef68

--- a/etc/project.properties
+++ b/etc/project.properties
@@ -61,7 +61,7 @@ geronimo.web.container=jetty
 #####################################################
 
 maven.xdoc.date=left
-maven.xdoc.version=DEV
+maven.xdoc.version=${pom.currentVersion}
 
 maven.linkcheck.enable=true
 
@@ -75,13 +75,13 @@ maven.xmlbeans2.baseSchemaLocation=META-INF
 maven.xmlbeans2.sourcedir=${basedir}/src
 
 #####################################################
-# Dependency Version
+# Dependency Versions
 #####################################################
 activeio_version=1.1
 activemq_version=3.1-M5
 geronimo_version=1.0-SNAPSHOT
 openejb_version=2.0-SNAPSHOT
-tranql_version=1.0-20050713
+tranql_version=1.1-SNAPSHOT
 tranql_connector_version=1.0-20050716
 
 geronimo_spec_activation_version=1.0.2-rc4
@@ -92,7 +92,7 @@ geronimo_spec_j2ee_connector_version=1.5-rc4
 geronimo_spec_j2ee_deployment_version=1.1-rc4
 geronimo_spec_j2ee_jacc_version=1.0-rc4
 geronimo_spec_j2ee_management_version=1.0-rc4
-geronimo_spec_javamail_version=1.3.1-rc5
+geronimo_spec_javamail_version=1.3.1-rc6-SNAPSHOT
 geronimo_spec_jaxr_version=1.0-rc4
 geronimo_spec_jaxrpc_version=1.1-rc4
 geronimo_spec_jms_version=1.1-rc4
