Converted login.html and loginerror.html to jsps for servlet 2.4 compatibility (security is a forward instead of redir under 2.4).
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@232332 13f79535-47bb-0310-9956-ffa450edef68

--- a/applications/console-framework/src/webapp/WEB-INF/web.xml
+++ b/applications/console-framework/src/webapp/WEB-INF/web.xml
@@ -70,8 +70,8 @@ limitations under the License.
         <auth-method>FORM</auth-method>
         <realm-name>geronimo-properties-realm</realm-name>
         <form-login-config>
-            <form-login-page>/login.html</form-login-page>
-            <form-error-page>/loginerror.html</form-error-page>
+            <form-login-page>/login.jsp</form-login-page>
+            <form-error-page>/loginerror.jsp</form-error-page>
       </form-login-config>
     </login-config>
     <security-role>
