Fixes eclipse project build with reference to xmlbeans
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@232504 13f79535-47bb-0310-9956-ffa450edef68

--- a/modules/client-builder/project.properties
+++ b/modules/client-builder/project.properties
@@ -2,5 +2,5 @@
 ## $Rev: 46019 $ $Date: 2004-09-14 02:56:06 -0700 (Tue, 14 Sep 2004) $
 ##
 
-maven.eclipse.classpath.include=${basedir}/target/xmlbeans
+maven.eclipse.classpath.include=${basedir}/target/xmlbeans,${basedir}/target/xmlbeans-classes
 maven.idea.generated.source=xmlbeans
