--- a/modules/j2ee-schema/project.properties
+++ b/modules/j2ee-schema/project.properties
@@ -3,7 +3,7 @@
 ##
 
 # Include the generated xmlbean classes in the eclipse classpath
-maven.eclipse.classpath.include=${basedir}/target/xmlbeans
+maven.eclipse.classpath.include=${basedir}/target/xmlbeans,${basedir}/target/xmlbeans-classes
 
 
 maven.idea.generated.source=xmlbeans
