--- a/modules/security-builder/project.properties
+++ b/modules/security-builder/project.properties
@@ -22,6 +22,6 @@
 maven.junit.jvmargs=-Djava.security.auth.login.config=src/test-data/data/login.config -Dlog4j.configuration=file:log4j.properties -ea
 maven.junit.fork=true
 # Include the generated xmlbean classes in the eclipse classpath
-maven.eclipse.classpath.include=${basedir}/target/xmlbeans
+maven.eclipse.classpath.include=${basedir}/target/xmlbeans,${basedir}/target/xmlbeans-classes
 
 maven.idea.generated.source=xmlbeans
