--- a/modules/connector-builder/project.properties
+++ b/modules/connector-builder/project.properties
@@ -3,7 +3,7 @@
 ##
 
 # Include the generated xmlbean classes in the eclipse classpath
-maven.eclipse.classpath.include=${basedir}/target/xmlbeans
+maven.eclipse.classpath.include=${basedir}/target/xmlbeans,${basedir}/target/xmlbeans-classes
 maven.junit.fork=true
 
 maven.junit.jvmargs=-Djava.security.auth.login.config=src/test-data/data/login.config -ea
