--- a/modules/web-builder/project.properties
+++ b/modules/web-builder/project.properties
@@ -6,6 +6,6 @@ maven.junit.jvmargs=-ea
 maven.junit.fork=true
 
 # Include the generated xmlbean classes in the eclipse classpath
-maven.eclipse.classpath.include=${basedir}/target/xmlbeans
+maven.eclipse.classpath.include=${basedir}/target/xmlbeans,${basedir}/target/xmlbeans-classes
 
 maven.idea.generated.source=xmlbeans
