--- a/etc/project.properties
+++ b/etc/project.properties
@@ -135,7 +135,7 @@ hsqldb_version=1.7.2.2
 jasper_version=5.5.9
 javacc_version=2.1
 jelly_velocity_tags_version=1.0
-jetty_version=5.1.4
+jetty_version=5.1.5rc0
 jstl_version=1.1.1
 juddi_version=SNAPSHOT
 junit_version=3.8.1
