--- a/etc/project.properties
+++ b/etc/project.properties
@@ -78,7 +78,7 @@ maven.xmlbeans2.sourcedir=${basedir}/src
 # Dependency Versions
 #####################################################
 activeio_version=1.1
-activemq_version=3.1-M5
+activemq_version=3.1-SNAPSHOT
 geronimo_version=1.0-SNAPSHOT
 openejb_version=2.0-SNAPSHOT
 tranql_version=1.1-SNAPSHOT
