Updates the xsd for true false and added in the eclipse stuff
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@239527 13f79535-47bb-0310-9956-ffa450edef68

--- a/modules/tomcat-builder/project.properties
+++ b/modules/tomcat-builder/project.properties
@@ -5,4 +5,7 @@
 maven.junit.jvmargs=-Djava.security.auth.login.config=src/test-resources/data/login.config -ea
 maven.junit.fork=true
 
+# Include the generated xmlbean classes in the eclipse classpath
+maven.eclipse.classpath.include=${basedir}/target/xmlbeans,${basedir}/target/xmlbeans-classes
+
 maven.idea.generated.source=xmlbeans
