--- a/modules/jetty-builder/project.properties
+++ b/modules/jetty-builder/project.properties
@@ -5,4 +5,5 @@
 maven.junit.jvmargs=-Djava.security.auth.login.config=src/test-resources/data/login.config -ea
 maven.junit.fork=true
 
+maven.eclipse.classpath.include=${basedir}/target/xmlbeans,${basedir}/target/xmlbeans-classes
 maven.idea.generated.source=xmlbeans
