GERONIMO-899 - patch from Sachin
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@239957 13f79535-47bb-0310-9956-ffa450edef68

--- a/sandbox/eclipse-plugin/org.apache.geronimo.ui/plugin.xml
+++ b/sandbox/eclipse-plugin/org.apache.geronimo.ui/plugin.xml
@@ -46,6 +46,16 @@
 	       enablesFor="1">
 	    </action>
 	 </objectContribution>
- </extension>
+  </extension>
+  
+  <extension point="org.eclipse.wst.server.ui.editorPageSections">   
+      <section
+         id="org.apache.server.geronimo.security"
+         order="10"
+         insertionId="org.eclipse.wst.server.editor.overview.left"
+         typeIds="org.eclipse.jst.server.geronimo.10"
+         class="org.apache.geronimo.ui.sections.ServerSecurityEditorSection">
+      </section>
+   </extension>
 
 </plugin>
