GERONIMO-884 : applied patch2.txt.  Ignored the removal of .cvsignore in patch as I had removed as part of other JIRA
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@240070 13f79535-47bb-0310-9956-ffa450edef68

--- a/sandbox/eclipse-plugin/org.apache.geronimo.core/plugin.xml
+++ b/sandbox/eclipse-plugin/org.apache.geronimo.core/plugin.xml
@@ -31,6 +31,8 @@
            class="org.apache.geronimo.core.internal.GeronimoServer"
            initialState="stopped"
            supportsRemoteHosts="false"
+           startTimeout="75000"
+	       stopTimeout="30000"
            startBeforePublish="true"
            runtimeTypeId="org.eclipse.jst.server.runtime.geronimo.10"
            launchConfigId="org.eclipse.jst.server.generic.core.launchConfigurationType"
