GERONIMO-889 switch to tranql derby connector
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@240393 13f79535-47bb-0310-9956-ffa450edef68

--- a/etc/project.properties
+++ b/etc/project.properties
@@ -83,6 +83,7 @@ geronimo_version=1.0-SNAPSHOT
 openejb_version=2.0-SNAPSHOT
 tranql_version=1.1-SNAPSHOT
 tranql_connector_version=1.0-20050716
+tranql_vendors_version=1.0-SNAPSHOT
 
 geronimo_spec_activation_version=1.0.2-rc4
 geronimo_spec_corba_version=2.3-rc4
