--- a/etc/project.properties
+++ b/etc/project.properties
@@ -105,7 +105,9 @@ geronimo_spec_qname_version=1.1-rc4
 
 ant_version=1.5
 antlr_version=2.7.2
+apacheds_version=0.9.2-SNAPSHOT
 asm_version=1.4.3
+asn1_version=0.3.2-SNAPSHOT
 axion_version=1.0-M3-dev
 axis_version=1.3-SNAPSHOT
 bouncycastle_version=jdk14-124
@@ -122,9 +124,10 @@ commons_fileupload_version=1.1-dev
 commons_httpclient_version=2.0.1
 commons_jelly_version=1.0-beta-4
 commons_jxpath_version=1.1
+commons_lang_version=2.0
 commons_logging_version=1.0.4
 commons_modeler_version=1.1
-commons_primitives_version=1.0
+commons_primitives_version=20041207.202534
 commons_pool_version=1.2
 concurrent_version=1.3.4
 derby_version=10.1.1.0
@@ -135,14 +138,19 @@ howl_version=0.1.8
 hsqldb_version=1.7.2.2
 jasper_version=5.5.9
 javacc_version=2.1
+jdbm_version=0.20-dev
 jelly_velocity_tags_version=1.0
 jetty_version=5.1.5rc0
 jstl_version=1.1.1
 juddi_version=SNAPSHOT
 junit_version=3.8.1
+kerberos_common_version=0.5
+kerberos_protocols_version=0.5
+ldap_protocols_version=0.9.2-SNAPSHOT
 log4j_version=1.2.8
 maven_itest_plugin_version=1.0
 maven_version=1.0.2
+mina_version=0.7.3
 mockobjects_version=0.09
 mx4j_version=3.0.1
 oro_version=2.0.8
@@ -153,6 +161,7 @@ regexp_version=1.3
 scout_version=1.0-SNAPSHOT
 servicemix_spring_version=1.2.2-dev-2
 servicemix_version=1.0-SNAPSHOT
+slf4j_version=1.0-beta4
 spring_version=1.1.3
 standard_taglibs_version=1.1.1
 stax_version=1.1.1-dev
