first cut at assembly using the plugins; for now just does system and server configs, the rest to follow soon
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@263817 13f79535-47bb-0310-9956-ffa450edef68

--- a/configs/geronimo-gbean-deployer/project.properties
+++ b/configs/geronimo-gbean-deployer/project.properties
@@ -19,7 +19,8 @@
 ## $Rev$ $Date$
 ##
 
-# override deploymentConfig to use bootstrap configuration
-geronimo.packaging.deploymentConfig=geronimo/cars/geronimo-gbean-deployer-0.1.1.car
+maven.multiproject.type=car
 
-geronimo_version=159810
+# override deploymentConfig to use bootstrap configuration
+geronimo.packaging.deploymentConfig=geronimo/cars/geronimo-gbean-deployer-0.2.car
+geronimo.packaging.deployerName=*:name=Deployer,j2eeType=Deployer,*
