--- a/configs/j2ee-server/project.properties
+++ b/configs/j2ee-server/project.properties
@@ -19,5 +19,14 @@
 ## $Rev: 158417 $ $Date: 2005-03-20 23:25:45 -0800 (Sun, 20 Mar 2005) $
 ##
 
+maven.multiproject.type=car
+
 # just use basic GBean deployer
-geronimo.packaging.deploymentConfig=geronimo/cars/geronimo-gbean-deployer-SNAPSHOT.car
+geronimo.packaging.deploymentConfig=geronimo/cars/geronimo-gbean-deployer-${geronimo_version}.car
+
+PlanHTTPPort=8080
+PlanHTTPSPort=8443
+PlanOpenEJBPort=4201
+PlanServerHostname=localhost
+PlanClientAddresses=127.0.0.1
+PlanRemoteLoginPort=4242
