--- a/project.properties
+++ b/project.properties
@@ -30,27 +30,18 @@ maven.remote.group=apcvs
 maven.multiproject.includes=\
 plugins/*/project.xml,\
 specs/*/project.xml,\
-openejb/modules/*/project.xml,\
 applications/*/project.xml,\
 modules/*/project.xml,\
-tmporb/modules/*/project.xml,\
-tranql/*/project.xml,
-#itests/naming/client/project.xml,\
-#itests/naming/common/project.xml,\
-#itests/naming/ejb/project.xml,\
-#itests/naming/war/project.xml
-#activemq/modules/*/project.xml,\
-#activemq/transports/*/project.xml,\
-#activemq/stores/*/project.xml,
-
-#howl/logger/project.xml,\
+configs/*/project.xml,\
+assemblies/*/project.xml,\
+openejb/modules/*/project.xml,\
+tranql/*/project.xml
 
 maven.multiproject.excludes=\
 openejb/modules/connector/project.xml,\
 openejb/modules/webadmin/project.xml,\
 activemq/modules/*/project.xml,\
 sandbox/*/project.xml
-#itests/*/project.xml,\
 
 maven.idea.project.multiproject.includes=${maven.multiproject.includes}
 maven.idea.project.multiproject.excludes=${maven.multiproject.excludes}
