--- a/configs/j2ee-system/project.properties
+++ b/configs/j2ee-system/project.properties
@@ -19,22 +19,24 @@
 ## $Rev: 158417 $ $Date: 2005-03-20 23:25:45 -0800 (Sun, 20 Mar 2005) $
 ##
 
+maven.multiproject.type=car
+
 # just use basic GBean deployer
-geronimo.packaging.deploymentConfig=geronimo/cars/geronimo-gbean-deployer-0.1.car
+geronimo.packaging.deploymentConfig=geronimo/cars/geronimo-gbean-deployer-${geronimo_version}.car
 
 geronimo.packaging.classPath= \
     ../lib/geronimo-spec-qname-${geronimo_spec_qname_version}.jar \
+    ../lib/geronimo-common-${geronimo_version}.jar \
     ../lib/geronimo-kernel-${geronimo_version}.jar \
     ../lib/geronimo-system-${geronimo_version}.jar \
-    ../lib/cglib-full-${cglib_version}.jar \
+    ../lib/cglib-nodep-${cglib_version}.jar \
     ../lib/commons-cli-${commons_cli_version}.jar \
     ../lib/commons-logging-${commons_logging_version}.jar \
     ../lib/log4j-${log4j_version}.jar \
     ../lib/mx4j-${mx4j_version}.jar \
     ../lib/mx4j-remote-${mx4j_version}.jar \
     ../lib/endorsed/xercesImpl-${xerces_version}.jar \
-    ../lib/endorsed/xmlParserAPIs-${xml_parser_apis_version}.jar \
-    ../lib/xbean-apache-${xmlbeans_version}.jar
+    ../lib/endorsed/xmlParserAPIs-${xml_parser_apis_version}.jar
 
 geronimo.packaging.mainClass=org.apache.geronimo.system.main.Daemon
 geronimo.packaging.endorsedDirs=lib/endorsed
