move welcome app from Tomcat to its own application extend the packaging plugin to deploy j2ee applications
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@264061 13f79535-47bb-0310-9956-ffa450edef68

--- a/modules/tomcat/src/var/ROOT/WEB-INF/web.xml
+++ b/modules/tomcat/src/var/ROOT/WEB-INF/web.xml
@@ -20,9 +20,6 @@
     xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd"
     version="2.4">
 
-  <display-name>Welcome to Geronimo</display-name>
-  <description>
-     Welcome to Geronimo
-  </description>
+  <display-name>Tomcat Fallback Application</display-name>
 
 </web-app>
