--- a/plugins/geronimo-packaging-plugin/plugin.properties
+++ b/plugins/geronimo-packaging-plugin/plugin.properties
@@ -25,8 +25,8 @@ geronimo.packaging.buildDir=${maven.build.dir}/plan
 geronimo.packaging.buildFile=${geronimo.packaging.buildDir}/${geronimo.packaging.planFile}
 
 geronimo.packaging.repository=${maven.repo.local}
-geronimo.packaging.deploymentConfig=org/apache/geronimo/J2EEDeployer
-geronimo.packaging.deployerName=*:name=Deployer,j2eeType=Deployer,J2EEModule=${geronimo.packaging.deploymentConfig},*
+geronimo.packaging.deploymentConfig=${pom.groupId}/cars/j2ee-deployer-${pom.currentVersion}.car
+geronimo.packaging.deployerName=geronimo.maven:name=Deployer,j2eeType=Deployer,J2EEModule=${pom.groupId}/cars/geronimo-gbean-deployer-${pom.currentVersion}.car,*
 
 geronimo.packaging.user=system
 geronimo.packaging.password=manager
