--- a/plugins/maven-geronimo-plugin/plugin.properties
+++ b/plugins/maven-geronimo-plugin/plugin.properties
@@ -1,6 +1,6 @@
 ##
 ##
-##   Copyright 2003-2004 The Apache Software Foundation
+##   Copyright 2005 The Apache Software Foundation
 ##
 ##   Licensed under the Apache License, Version 2.0 (the "License");
 ##   you may not use this file except in compliance with the License.
@@ -19,13 +19,5 @@
 ## $Rev: 45927 $ $Date: 2004-09-11 16:29:34 -0700 (Sat, 11 Sep 2004) $
 ##
 
-maven.compile.source=1.4
-maven.compile.target=1.4
-maven.compile.deprecation=true
-maven.compile.debug=true
-maven.compile.optimize=true
 
-maven.junit.jvmargs=-ea
-
-maven.multiproject.type=plugin
-
+geronimo.var.config.source=src/config
