try and fix problem with no application.xml in console ear; add console into the offline assembly process
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@264671 13f79535-47bb-0310-9956-ffa450edef68

--- a/applications/console-ear/project.properties
+++ b/applications/console-ear/project.properties
@@ -1,2 +1,6 @@
 maven.multiproject.type=ear
-maven.ear.appxml=target/plan/application.xml
+
+maven.ear.appxml.generate=true
+maven.ear.appxml.version=1.4
+
+geronimo.packaging.moduleFile=${maven.build.dir}/${maven.ear.final.name}
