GERONIMO-853 Changed assembly to create a .zip and .tar.gz.  Only the .zip is created by default. Changed assembly to create archives containing the root directory geronimo-${version}. Updated deployment plugin to expect .zip archive and root directory
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@264710 13f79535-47bb-0310-9956-ffa450edef68

--- a/modules/assembly/project.properties
+++ b/modules/assembly/project.properties
@@ -3,13 +3,7 @@
 ##
 
 # the directory containing the geronimo website in CVS
-
 geronimo.cvs.docdir = ../incubator-site/build/site/projects/geronimo
-
-# Uncomment this line to use the deployer offline.
-# This is slower and doesn't check that the runtime deployer works,
-# but doesn't start jetty, openejb, etc.
-#geronimo.assemble.offline=true
 
 # Controls whether the logs generated during assembly are removed before packaging
 geronimo.assemble.delete.logs=true
@@ -19,3 +13,9 @@ geronimo.assemble.clean=true
 #geronimo.assemble.minimal=true
 
 derby.system.home=${maven.build.dir}/${pom.groupId}-${pom.currentVersion}/var/derby
+
+geronimo.assembly.tar=flase
+geronimo.assembly.zip=true
+geronimo.assembly.distributions.dir=${maven.build.dir}/distributions
+geronimo.assembly.name=${maven.final.name}
+geronimo.assembly.dir=${maven.build.dir}/${geronimo.assembly.name}
