comment out in-build packaging
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@264809 13f79535-47bb-0310-9956-ffa450edef68

--- a/project.properties
+++ b/project.properties
@@ -32,8 +32,8 @@ plugins/*/project.xml,\
 specs/*/project.xml,\
 applications/*/project.xml,\
 modules/*/project.xml,\
-configs/*/project.xml,\
-assemblies/*/project.xml,\
+#configs/*/project.xml,\
+#assemblies/*/project.xml,\
 openejb/modules/*/project.xml,\
 tranql/*/project.xml
 
