--- a/etc/project.properties
+++ b/etc/project.properties
@@ -123,7 +123,7 @@ commons_el_version=1.0
 commons_io_version=1.0
 commons_fileupload_version=1.1-dev
 commons_httpclient_version=2.0.1
-commons_jelly_version=1.0-beta-4
+commons_jelly_version=1.0
 commons_jxpath_version=1.1
 commons_lang_version=2.0
 commons_logging_version=1.0.4
