add some dependencies so jaxr might work
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@264882 13f79535-47bb-0310-9956-ffa450edef68

--- a/etc/project.properties
+++ b/etc/project.properties
@@ -140,6 +140,7 @@ hsqldb_version=1.7.2.2
 jasper_version=5.5.9
 javacc_version=2.1
 jdbm_version=0.20-dev
+jdom_version=1.0
 jelly_velocity_tags_version=1.0
 jetty_version=5.1.5rc0
 jstl_version=1.1.1
