Fixed GERONIMO-954 Assembly doesn't clean itself every time Fixed typo in property names
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@264904 13f79535-47bb-0310-9956-ffa450edef68

--- a/modules/assembly/project.properties
+++ b/modules/assembly/project.properties
@@ -6,11 +6,11 @@
 geronimo.cvs.docdir = ../incubator-site/build/site/projects/geronimo
 
 # Controls whether the logs generated during assembly are removed before packaging
-geronimo.assemble.delete.logs=true
+geronimo.assembly.delete.logs=true
 
 #controls whether to remove previous versions even if clean was not explicitly called
-geronimo.assemble.clean=true
-#geronimo.assemble.minimal=true
+geronimo.assembly.clean=true
+#geronimo.assembly.minimal=true
 
 derby.system.home=${maven.build.dir}/${pom.groupId}-${pom.currentVersion}/var/derby
 
