Add redirect to console
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@267490 13f79535-47bb-0310-9956-ffa450edef68

--- a/applications/console-standard/src/webapp/WEB-INF/web.xml
+++ b/applications/console-standard/src/webapp/WEB-INF/web.xml
@@ -845,7 +845,10 @@ limitations under the License.
         <role-name>tomcat</role-name>
     </security-role>
     -->
-
+    <welcome-file-list>
+        <welcome-file>index.html</welcome-file>
+    </welcome-file-list>
+    
     <jsp-config>
         <taglib>
             <taglib-uri>http://java.sun.com/portlet</taglib-uri>
