Add some JSR-77 statistics implementations to management module Add unit constants to JSR-77 Statistics interface Add first JSR-77 StatisticsProvider implementation (for the JVM) Remove some unused JSR-77 stuff from the kernel & core GBeanInstance is no longer responsible for J2EEManagedObject or   EventProvider Use JVMStats to dynamically update the console (AJAX just so f'n rocks!)
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@278562 13f79535-47bb-0310-9956-ffa450edef68

--- a/applications/console-standard/src/webapp/WEB-INF/web.xml
+++ b/applications/console-standard/src/webapp/WEB-INF/web.xml
@@ -649,6 +649,23 @@ limitations under the License.
 
 
 
+<servlet>
+  <display-name>DWR Servlet</display-name>
+  <servlet-name>dwr-invoker</servlet-name>
+  <servlet-class>uk.ltd.getahead.dwr.DWRServlet</servlet-class>
+  <init-param>
+     <param-name>debug</param-name>
+     <param-value>true</param-value>
+  </init-param>
+</servlet>
+
+<servlet-mapping>
+  <servlet-name>dwr-invoker</servlet-name>
+  <url-pattern>/dwr/*</url-pattern>
+</servlet-mapping>
+
+
+
     <servlet-mapping>
         <servlet-name>EJBServer</servlet-name>
         <url-pattern>/EJBServer/*</url-pattern>
@@ -848,7 +865,7 @@ limitations under the License.
     <welcome-file-list>
         <welcome-file>index.html</welcome-file>
     </welcome-file-list>
-    
+
     <jsp-config>
         <taglib>
             <taglib-uri>http://java.sun.com/portlet</taglib-uri>
