--- a/etc/project.properties
+++ b/etc/project.properties
@@ -93,7 +93,7 @@ geronimo_spec_j2ee_version=1.4-rc4
 geronimo_spec_j2ee_connector_version=1.5-rc4
 geronimo_spec_j2ee_deployment_version=1.1-rc4
 geronimo_spec_j2ee_jacc_version=1.0-rc5-SNAPSHOT
-geronimo_spec_j2ee_management_version=1.0-rc4
+geronimo_spec_j2ee_management_version=1.0-rc5
 geronimo_spec_javamail_version=1.3.1-rc6-SNAPSHOT
 geronimo_spec_jaxr_version=1.0-rc4
 geronimo_spec_jaxrpc_version=1.1-rc4
@@ -133,6 +133,7 @@ commons_pool_version=1.2
 concurrent_version=1.3.4
 derby_version=10.1.1.0
 dom4j_version=1.4
+dwr_version=1.0
 eclipse_compiler_version=3.0.1
 howl_version=0.1.8
 #security:
