--- a/etc/project.properties
+++ b/etc/project.properties
@@ -78,7 +78,7 @@ maven.xmlbeans2.sourcedir=${basedir}/src
 #####################################################
 # Dependency Versions
 #####################################################
-activeio_version=1.1
+activeio_version=2.0-20050905
 activemq_version=3.2-SNAPSHOT
 geronimo_version=1.0-SNAPSHOT
 openejb_version=2.0-SNAPSHOT
