--- a/etc/project.properties
+++ b/etc/project.properties
@@ -83,7 +83,7 @@ activemq_version=3.2-SNAPSHOT
 geronimo_version=1.0-SNAPSHOT
 openejb_version=2.0-SNAPSHOT
 tranql_version=1.1-SNAPSHOT
-tranql_connector_version=1.0-20050716
+tranql_connector_version=1.0-SNAPSHOT
 tranql_vendors_version=1.0-SNAPSHOT
 
 geronimo_spec_activation_version=1.0.2-rc4
