--- a/etc/project.properties
+++ b/etc/project.properties
@@ -145,7 +145,7 @@ jdom_version=1.0
 jelly_velocity_tags_version=1.0
 jetty_version=5.1.5rc0
 jstl_version=1.1.1
-juddi_version=SNAPSHOT
+juddi_version=0.9rc4
 junit_version=3.8.1
 kerberos_common_version=0.5
 kerberos_protocols_version=0.5
@@ -161,7 +161,7 @@ pluto_version=1.0.1-SNAPSHOT
 portlet_api_version=1.0
 p2psockets_version=1.1.2
 regexp_version=1.3
-scout_version=1.0-SNAPSHOT
+scout_version=0.5
 servicemix_spring_version=1.2.2-dev-2
 servicemix_version=1.0-SNAPSHOT
 slf4j_version=1.0-beta7
