--- a/etc/project.properties
+++ b/etc/project.properties
@@ -156,7 +156,7 @@ mina_version=0.7.3
 mockobjects_version=0.09
 mx4j_version=3.0.1
 oro_version=2.0.8
-pluto_version=1.0.1-SNAPSHOT
+pluto_version=1.0.1
 portlet_api_version=1.0
 p2psockets_version=1.1.2
 regexp_version=1.3
