Directory off of snapshots. Many thanks
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@291640 13f79535-47bb-0310-9956-ffa450edef68

--- a/etc/project.properties
+++ b/etc/project.properties
@@ -106,9 +106,9 @@ geronimo_spec_qname_version=1.1-rc4
 
 ant_version=1.5
 antlr_version=2.7.2
-apacheds_version=0.9.2-SNAPSHOT
+apacheds_version=0.9.2
 asm_version=1.4.3
-asn1_version=0.3.2-SNAPSHOT
+asn1_version=0.3.2
 axion_version=1.0-M3-dev
 axis_version=1.3-SNAPSHOT
 cglib_version=2.1_2
@@ -148,7 +148,7 @@ juddi_version=0.9rc4
 junit_version=3.8.1
 kerberos_common_version=0.5
 kerberos_protocols_version=0.5
-ldap_protocols_version=0.9.2-SNAPSHOT
+ldap_protocols_version=0.9.2
 log4j_version=1.2.8
 maven_itest_plugin_version=1.0
 maven_version=1.0.2
