--- a/etc/project.properties
+++ b/etc/project.properties
@@ -80,7 +80,7 @@ maven.xmlbeans2.sourcedir=${basedir}/src
 #####################################################
 activeio_version=2.0-r118
 activemq_version=3.2-SNAPSHOT
-geronimo_version=1.0-SNAPSHOT
+geronimo_version=1.0-M5-SNAPSHOT
 openejb_version=2.0-SNAPSHOT
 tranql_version=1.1-SNAPSHOT
 tranql_connector_version=1.0-SNAPSHOT
