--- a/etc/project.properties
+++ b/etc/project.properties
@@ -79,7 +79,7 @@ maven.xmlbeans2.sourcedir=${basedir}/src
 # Dependency Versions
 #####################################################
 activeio_version=2.0-r118
-activemq_version=3.2-SNAPSHOT
+activemq_version=3.2-M1
 geronimo_version=1.0-M5-SNAPSHOT
 openejb_version=2.0-G1M5-SNAPSHOT
 tranql_version=1.1-SNAPSHOT
