--- a/etc/project.properties
+++ b/etc/project.properties
@@ -79,12 +79,12 @@ maven.xmlbeans2.sourcedir=${basedir}/src
 # Dependency Versions
 #####################################################
 activeio_version=2.0-r118
-activemq_version=3.2-SNAPSHOT
+activemq_version=3.2-M1
 geronimo_version=1.0-SNAPSHOT
 openejb_version=2.0-SNAPSHOT
-tranql_version=1.1-SNAPSHOT
-tranql_connector_version=1.0-SNAPSHOT
-tranql_vendors_version=1.0-SNAPSHOT
+tranql_version=1.1
+tranql_connector_version=1.0
+tranql_vendors_version=1.0
 
 geronimo_spec_activation_version=1.0.2-rc4
 geronimo_spec_corba_version=2.3-rc4
@@ -92,9 +92,9 @@ geronimo_spec_ejb_version=2.1-rc4
 geronimo_spec_j2ee_version=1.4-rc4
 geronimo_spec_j2ee_connector_version=1.5-rc4
 geronimo_spec_j2ee_deployment_version=1.1-rc4
-geronimo_spec_j2ee_jacc_version=1.0-rc5-SNAPSHOT
+geronimo_spec_j2ee_jacc_version=1.0-rc5
 geronimo_spec_j2ee_management_version=1.0-rc4
-geronimo_spec_javamail_version=1.3.1-rc6-SNAPSHOT
+geronimo_spec_javamail_version=1.3.1-rc6
 geronimo_spec_jaxr_version=1.0-rc4
 geronimo_spec_jaxrpc_version=1.1-rc4
 geronimo_spec_jms_version=1.1-rc4
