--- a/etc/project.properties
+++ b/etc/project.properties
@@ -82,7 +82,7 @@ activeio_version=2.0-r118
 activemq_version=3.2-M1
 geronimo_version=1.0-SNAPSHOT
 openejb_version=2.0-SNAPSHOT
-tranql_version=1.1
+tranql_version=1.2-SNAPSHOT
 tranql_connector_version=1.0
 tranql_vendors_version=1.0
 
