--- a/etc/project.properties
+++ b/etc/project.properties
@@ -110,7 +110,7 @@ apacheds_version=0.9.2
 asm_version=1.4.3
 asn1_version=0.3.2
 axion_version=1.0-M3-dev
-axis_version=1.3-SNAPSHOT
+axis_version=1.3-293059G1M5
 cglib_version=2.1_2
 castor_version=0.9.5.3
 commons_beanutils_version=1.6.1
@@ -182,6 +182,10 @@ xmlbeans_maven_plugin_version=2.0.0-beta1
 xmlpull_version=1.1.3.4d_b4_min
 xpp3_version=1.1.3.3
 xstream_version=1.0.2
+
+maven.jar.override=on
+maven.jar.axis=${basedir}/../../lib/axis-1.3-293059G1M5.jar
+
 
 #####################################################
 # Site Colors
