--- a/etc/project.properties
+++ b/etc/project.properties
@@ -30,6 +30,7 @@ http://cvs.apache.org/repository,\
 http://dist.codehaus.org,\
 http://www.mortbay.org/maven,\
 http://www.ibiblio.org/maven,\
+http://openejb.org/maven,\
 http://people.apache.org/~jgenender/maven
 
 maven.remote.group=apcvs
@@ -80,8 +81,8 @@ maven.xmlbeans2.sourcedir=${basedir}/src
 #####################################################
 activeio_version=2.0-r118
 activemq_version=3.2-M1
-geronimo_version=1.0-M5-SNAPSHOT
-openejb_version=2.0-G1M5-SNAPSHOT
+geronimo_version=1.0-M5
+openejb_version=2.0-G1M5
 tranql_version=1.1
 tranql_connector_version=1.0
 tranql_vendors_version=1.0
@@ -110,7 +111,7 @@ apacheds_version=0.9.2
 asm_version=1.4.3
 asn1_version=0.3.2
 axion_version=1.0-M3-dev
-axis_version=1.3-293059G1M5
+axis_version=1.3-svn293059-geronimo
 cglib_version=2.1_2
 castor_version=0.9.5.3
 commons_beanutils_version=1.6.1
@@ -183,8 +184,10 @@ xmlpull_version=1.1.3.4d_b4_min
 xpp3_version=1.1.3.3
 xstream_version=1.0.2
 
-maven.jar.override=on
-maven.jar.axis=${basedir}/../../lib/axis-1.3-293059G1M5.jar
+#Our axis jar should be at the openejb repo.  If it disappears, it is also
+#in the lib directory: use the following to find it.
+#maven.jar.override=on
+#maven.jar.axis=${basedir}/../../lib/axis-1.3-svn293059-geronimo.jar
 
 
 #####################################################
